// file: pkg/cache/proto/responses/configure_policy_response.proto
// version: 1.0.0
// guid: 123e4567-e89b-12d3-a456-426614174020

edition = "2023";

package gcommon.v1.cache;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/jdfalk/gcommon/pkg/cache/proto";

/**
 * Response for configuring cache policies.
 */
message ConfigurePolicyResponse {
  // Namespace ID that was configured
  string namespace_id = 1;

  // Applied eviction policy
  string eviction_policy = 2;

  // Applied maximum TTL
  int32 max_ttl_seconds = 3;

  // Applied memory threshold
  double memory_threshold_percent = 4;

  // When the policy was applied
  google.protobuf.Timestamp applied_at = 5;

  // Previous policy configuration
  map<string, string> previous_config = 6;

  // New policy configuration
  map<string, string> new_config = 7;
}
