// file: proto/gcommon/v1/database/schema/run_migration_request.proto

edition = "2023";

package gcommon.v1.database.schema;

import "google/protobuf/go_features.proto";
import "proto/gcommon/v1/common/messages/request_metadata.proto";
import "proto/gcommon/v1/database/schema/migration_script.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/proto/gcommon/v1/database/schema";

message RunMigrationRequest {
  // Database name to run migrations against
  string database = 1;

  // List of migration scripts to execute
  repeated MigrationScript scripts = 2 [lazy = true];

  // Request metadata for tracing and authentication
  gcommon.v1.common.RequestMetadata metadata = 3 [lazy = true];
}
